update builder now sets backup to true for asset.dat and game.dat